--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,6 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
-### VS Code ###
-.vscode/
 /src/main/resources/application-homol.properties
+/src/main/resources/application-prod.properties
+
